<resources>
    <string name="app_name">HappyCash</string>
    <string name="test">test</string>
    <string name="test_desc">descdescdescdescdescdescdescdescdescdescdescdescdescdescdescdescdescdescdescdescdescdesc</string>
    <string name="title_personal_infor">Informasi Pribadi</string>
    <string name="show_not_login_yet">Belum Login</string>
    <string name="text_build_up_tip">Data anda telah dikembalikan karena alasan di bawah ini, silahkan perbaiki data
        berikut dan ajukan kembali</string>
    <string name="text_build_up_tip2">Silahkan perbaiki data anda berdasarkan feedback di atas</string>
    <string name="text_build_up_title"> Data Dikembalikan</string>
    <string name="text_build_up_btn">Ajukan Data</string>
    <string name="build_up_modify_contact_info">Ubah info kontak</string>
    <string name="build_up_upload_ktp">Upload ulang foto KTP</string>
    <string name="build_up_upload_bank_info">Ubah info bank</string>
    <string name="build_up_modify_job_info">Ubah info pekerjaan</string>
    <string name="show_input_error">Kode salah, silahkan periksa dan coba lagi</string>
    <string name="edittext_personal_info_full_name">Nama Lengkap</string>
    <string name="edittext_personal_info_ktp_no">No KTP</string>
    <string name="edittext_personal_info_family_name_in_law">Nama Gadis Ibu Kandung</string>
    <string name="textview_personal_info_gender">Jenis Kelamin</string>
    <string name="textview_personal_info_education">Edukasi</string>
    <string name="textview_personal_info_marital_status">Status Perkawinan</string>
    <string name="textview_personal_info_number_of_children">Jumlah Anak</string>
    <string name="textview_personal_info_province_of_residence">Provinsi Tempat Tinggal</string>
    <string name="textview_personal_info_city_of_residence">Kota Tempat Tinggal</string>
    <string name="textview_personal_info_street_of_residence">Kecamatan </string>
    <string name="textview_personal_info_area_of_residence">Kelurahan </string>
    <string name="textview_personal_info_address">Alamat Lengkap</string>
    <string name="textview_personal_info_duration_of_residence">Durasi Hunian</string>
    <string name="textview_job_info_title">Informasi Pekerjaan</string>
    <string name="textview_job_info_job_type">Tipe Pekerjaan</string>
    <string name="textview_job_info_monthly_income">Pendapatan Bulanan</string>
    <string name="edittext_job_info_company_name">Nama Perusahaan</string>
    <string name="textview_job_info_province_of_company_located">Provinsi Perusahaan</string>
    <string name="textview_job_info_city_of_company_located">Kota Perusahaan</string>
    <string name="textview_job_info_street_of_company_located">Kecamatan Perusahaan</string>
    <string name="textview_job_info_city_in_the_village">Kelurahan Perusahaan</string>
    <string name="edittext_job_info_address">Alamat Lengkap</string>
    <string name="edittext_job_info_tel_of_company">No Tel Perusahaan</string>
    <string name="textview_loaning_text1">Melalui analisa mahadata, jumlah maksimal pinjaman Anda (Rp)</string>
    <string name="textview_loaning_text2">Silahkan pilih tenor cicilan(bulan)</string>
    <string name="textview_loaning_bind_card">Rekening Penerima</string>
    <string name="textview_loaning_borrowing_reason">Tujuan Pinjaman</string>
    <string name="how_to_borrow">Cara Meminjam</string>
    <string name="borrowing_costs">Biaya Pinjaman</string>
    <string name="how_to_return_the_loan">Cara Mengembalikan Pinjaman</string>
    <string name="custom_service_hot_line">Hotline Layanan Pelanggan</string>
    <string name="data_integrity">Integritas Data</string>
    <string name="loan_info">Info Pinjaman</string>
    <string name="person_info">Informasi Pribadi</string>
    <string name="employ_info">Informasi Pekerjaan</string>
    <string name="contact_info">Info Kontak</string>
    <string name="ss_info">Otorisasi Jaminan Sosial</string>
    <string name="contact">Kontak</string>
    <string name="telephone_number">Nomor telepon</string>
    <string name="loan_count">Jumlah Pinjaman</string>
    <string name="time_period">Jangka Waktu</string>
    <string name="number_of_returns">Jumlah Pengembalian</string>
    <string name="quit_login">keluar</string>
    <string name="submit">Kirim</string>
    <string name="ktp">KTP</string>
    <string name="login_logout">Login/Daftar</string>
    <string name="textview_online_QA">Layanan Online</string>
    <string name="name">Nama</string>
    <string name="name_of_beneficiary_bank">Nama Bank Penerima</string>
    <string name="rule_number_receiver">Nomor Rek. Penerima</string>
    <string name="auth">otentikasi</string>
    <string name="hailed_auth">Otentikasi berhail</string>
    <string name="my_loan">Pinjaman Saya</string>
    <string name="safe_setting">Pengaturan Keamanan</string>
    <string name="current_repay">Pembayaran saat ini</string>
    <string name="textview_loan">Pinjam</string>
    <string name="textview_certification">Profil</string>
    <string name="help_center">Pusat Bantuan</string>
    <string name="status">Status</string>
    <string name="textview_me">Saya</string>
    <string name="text_next">NEXT</string>
    <string name="no_order">No.Order</string>
    <string name="edittext_phone_number_hint">Silakan masukkan no ponsel anda</string>
    <string name="button_obtain_code">Dapatkan\n Kode</string>
    <string name="about_happy_cash">Tentang HappyCash</string>
    <string name="telephone">Telepon</string>
    <string name="disbursement_date">Tanggal Pencairan</string>
    <string name="due_date">Tanggal Jatuh Tempo</string>
    <string name="date_of_return">Tanggal Pengembalian</string>
    <string name="invite_friends">Undang Teman</string>
    <string name="upload_photo">Upload Foto</string>
    <string name="submit_time">Waktu Pengajuan</string>
    <string name="borrowed_details">Rincian Pinjaman</string>
    <string name="relative">Hubungan</string>
    <string name="family_card">Halaman Depan KTP</string>
    <string name="photo_worker_with_uniform">Foto Kartu Pekerja (Jika tidak ada anda dapat foto memakai seragam kerja)</string>
    <string name="in_analysis_it_done_f">Dalam analisa, telah selesai %s</string>
    <string name="full_repayment">Pelunasan Penuh</string>
    <string name="pay">Bayar</string>
    <string name="number_of_returns_for_this_period">Jumlah pengembalian periode ini(Rp)</string>
    <string name="payment_date_f">Tanggai penbayaran %s</string>
    <string name="payment_date_df">Tanggai penbayaran --</string>
    <string name="number">Jumlah</string>
    <string name="tenor">Tenor</string>
    <string name="details">Rincian</string>
    <string name="early_repayment">Pelunasan lebih awal</string>
    <string name="time_period2">Jumlah Periode</string>
    <string name="rp_df">Rp--</string>
    <string name="df">--</string>
    <string name="change_the_pattern_password">Ubah password pola</string>
    <string name="reload_id">Upload ulang KTP</string>
    <string name="if_want_change_phone_please_call__">Jika anda ingin mengganti nomor ponsel , silahkan hubungi telepon layanan pelanggan: 02139506666</string>
    <string name="you_can_repay_the_loan_in_the_following_ways">Anda dapat mengembalikan pinjaman dengan cara berikut:</string>
    <string name="internet_banking">Internet Banking</string>
    <string name="atm">ATM</string>
    <string name="repayment_method_atm">ATM</string>
    <string name="repayment_method_online">ONLINE</string>
    <string name="repayment_method_mbanking">MBANKING</string>
    <string name="repayment_warning">Pastikan mengunakan Kode Pembayaran yang terbaru,karenakode pembayaran Alfamart akan berubah setiap 6 Jam dan waktu offline Alfmart adalah pukul 21:00-9:00</string>
    <string name="mobile_banking">Mobile Banking</string>
    <string name="alfarmart_pay">Alfarmart Pay</string>
    <string name="this_transaction_can_be_done_through_all">Transaksi ini dapat dilakukan melalui seluruh bank dan Alfamart</string>
    <string name="not_return_clear">Belum lunas</string>
    <string name="return_clear">Dibayar</string>
    <string name="more_than_expected">Lebih dari yang diharapkan</string>
    <string name="button_logout">Log out</string>
    <string name="add_bank_card">Tambahkan kartu bank</string>
    <string name="submit_fee">Biaya Pengajuan</string>
    <string name="returns_per_period">Pengembalian per periode</string>
    <string name="recipient_bank_name">Nama Bank Penerima</string>
    <string name="recipient_account_no">No Rekening Penerima</string>
    <string name="had_upload_these_photo_please_re_photo">Kedua gambar ini telah diunggah, silakan rekam ulang</string>
    <string name="every_pay">Jumlah pembayaran per bulan Rp</string>
    <string name="reject_left_day">Silahkan coba lagi dalam %s hari</string>
    <string name="relation_parent">ORANGTUA</string>
    <string name="relation_friend">TEMAN</string>
    <string name="relation_spouse">PASANGAN</string>
    <string name="relation_sibling">SAUDARA</string>
    <string name="relation_colleague">REKAN</string>
    <string name="relation_classmate">TEMAN KELAS</string>
    <string name="apply_purpose_EDUCATION">BIAYA PENDIDIKAN</string>
    <string name="apply_purpose_MEDICAL">BIAYA MEDIS</string>
    <string name="apply_purpose_DAILY_PRODUCTS">PRODUK KEBUTUHAN SEHARI-HARI</string>
    <string name="apply_purpose_BUSINESS_CAPITAL">MODAL BISNIS</string>
    <string name="apply_purpose_ELECTRICITY_BILL">TAGIHAN LISTRIK</string>
    <string name="apply_purpose_LOAN_PAYMENT">BAYAR PINJAMAN</string>
    <string name="apply_purpose_ELECTRONICS_INSTALLMENT">CICILAN ELEKTRONIK</string>
    <string name="apply_purpose_HOUSE_INSTALLMENT">CICILAN RUMAH</string>
    <string name="apply_purpose_VEHICLE_INSTALLMENT">CICILAN KENDARAAN</string>
    <string name="apply_purpose_VEHICLE_REPAIRMENT">PERBAIKAN KENDARAAN</string>
    <string name="apply_purpose_VACATION">	LIBURAN</string>
    <string name="apply_purpose_HOUSE_RENOVATION">RENOVASI RUMAH</string>
    <string name="apply_purpose_APARTMENT_RENT">BAYAR KOS</string>
    <string name="apply_purpose_WEDDING_EXPENSES">BIAYA PERNIKAHAN</string>
    <string name="apply_purpose_TRANSPORTAION_FEE">BIAYA TRANSPORTASI</string>
    <string name="apply_purpose_OTHERS">	LAIN-LAIN</string>
    <string name="show_upload_failed">upload gagal</string>
    <string name="show_upload_sucess">upload berhasil</string>
    <string name="enum_period_three_month">TIGA_BULAN</string>
    <string name="enum_period_six_month">ENAM_BULAN</string>
    <string name="enum_period_one_year">SATU_TAHUN</string>
    <string name="remaining_loan_principal">Sisa pokok pinjaman </string>
    <string name="interest">Bunga</string>
    <string name="penalty_interest">Penalti bunga</string>
    <string name="total">Total</string>
    <string name="left_principal_">Sisa biaya pokok:</string>
    <string name="only_support_left_loan">Hanya mendukung satu kali penyelesaikan sisa pinjaman</string>
    <string name="amount_of_payment_">Jumlah pembayaran:</string>
    <string name="basic_costs_to_be_paid">Biaya pokok yang harus dibayar：</string>
    <string name="interest_to_be_paid">Bunga yang harus dibayar：</string>
    <string name="fines_to_be_paid">Denda yang harus dibayar：</string>
    <string name="early_repayment_service_fees">Biaya layanan pelunasan lebih awal：</string>
    <string name="attention">Perhatian</string>
    <string name="cancel2">Batalkan</string>
    <string name="ok2">OK</string>
    <string name="early_paid_rule">1. Silakan lunasi pembayaran penuh offline pada tanggal pembayaran kembali；

    \n2. Jika dalam 24jam waktu pembayaran masih belum menyelesaikan pembayaran, jumlah transfer akan diutamakan pembayaran saat itu；

    \n3. Karena diproses oleh bank, waktu pencairan dana sesungguhnya akan ada keterlambatan, jika pembayaran penuh berhasil, mohon sabar menunggu beberapa menit atau hubungi customer service kami；
</string>
</resources>