<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_round_40_white">


    <TextView
        style="@style/text_wrap_layout"
        android:textColor="@color/a2_blue"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/left_principal_"
        />

    <TextView
        style="@style/text_wrap_layout"
        android:textColor="@color/a2_blue"
        android:textSize="14sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/only_support_left_loan"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp">
        <TextView
            style="@style/text_wrap_layout"
            android:textColor="@color/a2_blue"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/amount_of_payment_"
            />
        <TextView
            android:id="@+id/amountMoney"
            style="@style/text_wrap_layout"
            android:textColor="@color/black_00"
            android:textSize="14sp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <!--<RelativeLayout-->
        <!--android:layout_width="20dp"-->
        <!--android:layout_height="10dp"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:background="@drawable/triangle_blue">-->

    <!--</RelativeLayout>-->

    <ImageView
        android:layout_width="27dp"
        android:layout_height="11.5dp"
        android:background="@drawable/rectangle"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#f0f6f6ff">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <TextView
                style="@style/text_wrap_layout"
                android:textColor="@color/a2_blue"
                android:textSize="13sp"
                android:layout_centerVertical="true"
                android:text="@string/basic_costs_to_be_paid"
                />
            <TextView
                android:id="@+id/basicPaid"
                style="@style/text_wrap_layout"
                android:textColor="@color/a2_blue"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <TextView
                style="@style/text_wrap_layout"
                android:textColor="@color/a2_blue"
                android:textSize="13sp"
                android:layout_centerVertical="true"
                android:text="@string/interest_to_be_paid"
                />
            <TextView
                android:id="@+id/interestPaid"
                style="@style/text_wrap_layout"
                android:textColor="@color/a2_blue"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <TextView
                style="@style/text_wrap_layout"
                android:textColor="@color/a2_blue"
                android:textSize="13sp"
                android:layout_centerVertical="true"
                android:text="@string/fines_to_be_paid"
                />
            <TextView
                android:id="@+id/finesPaid"
                style="@style/text_wrap_layout"
                android:textColor="@color/a2_blue"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <TextView
                style="@style/text_wrap_layout"
                android:textColor="@color/a2_blue"
                android:textSize="13sp"
                android:layout_centerVertical="true"
                android:text="@string/early_repayment_service_fees"
                />
            <TextView
                android:id="@+id/earlyRepayServiceFees"
                style="@style/text_wrap_layout"
                android:textColor="@color/a2_blue"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp">
            <TextView
                style="@style/text_wrap_layout"
                android:layout_alignParentRight="true"
                android:textColor="@color/a2_blue"
                android:textSize="13sp"
                android:text="(Sisa penalti biaya pokok 6%)"
                />
        </RelativeLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="6dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/cutDownFees"
        style="@style/text_wrap_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/a2_blue"
        android:textSize="14sp"
        />

    <TextView
        style="@style/text_wrap_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:textColor="#4A4A4A"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/attention"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/text_wrap_layout"
                android:textColor="#9B9B9B"
                android:textSize="12sp"
                android:text="@string/early_paid_rule"
                />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:id="@+id/cancel"
            android:layout_width="150dp"
            android:layout_height="45dp"
            >
            <TextView
                style="@style/text_wrap_layout"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/a2_blue"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:text="@string/cancel2"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/confirm"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_btn_blue"
            >
            <TextView
                style="@style/text_wrap_layout"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:text="@string/ok2"
                />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="12dp"/>

</LinearLayout>