<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:background="@drawable/bg_round_50_white">

    <TextView
        style="@style/text_wrap_layout"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/app_blue"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/full_repayment"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                style="@style/text_wrap_layout"
                android:textColor="@color/text_orange"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:text="@string/remaining_loan_principal"
                />
            <TextView
                android:id="@+id/remainMoney"
                style="@style/text_wrap_layout"
                android:textColor="@color/app_blue"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp">
            <TextView
                style="@style/text_wrap_layout"
                android:textColor="@color/text_orange"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:text="@string/interest"
                />
            <TextView
                android:id="@+id/interest"
                style="@style/text_wrap_layout"
                android:textColor="@color/app_blue"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp">
            <TextView
                style="@style/text_wrap_layout"
                android:textColor="@color/text_orange"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:text="@string/penalty_interest"
                />
            <TextView
                android:id="@+id/penaltyInterest"
                style="@style/text_wrap_layout"
                android:textColor="@color/app_blue"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d6d6d6"
            android:layout_marginTop="20dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp">
            <TextView
                style="@style/text_wrap_layout"
                android:textColor="@color/app_brown"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:text="@string/total"
                />
            <TextView
                android:id="@+id/total"
                style="@style/text_wrap_layout"
                android:textColor="@color/app_blue"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/submit"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_btn_blue"
        android:layout_gravity="center_horizontal">
        <TextView
            style="@style/text_wrap_layout"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_centerInParent="true"
            android:text="@string/pay"
            />
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

</LinearLayout>