<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:background="@color/app_yellow">
        <TextView
            style="@style/text_wrap_layout"
            android:layout_centerInParent="true"
            android:textColor="@color/text_blue"
            android:textSize="16sp"
            android:text="@string/full_repayment" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/top_height"
        android:background="@color/app_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="290dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:background="@color/app_yellow">
                    <TextView
                        style="@style/text_wrap_layout"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/text_blue"
                        android:textSize="12sp"
                        android:layout_marginTop="20dp"
                        android:text="@string/number_of_returns_for_this_period" />
                    <TextView
                        style="@style/text_wrap_layout"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/text_blue"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        android:layout_marginTop="43dp"
                        android:text="--"
                        />
                    <TextView
                        style="@style/text_wrap_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="113dp"
                        android:textColor="@color/text_blue"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/payment_date_df" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="170dp"
                    android:background="@color/app_white">
                    <TextView
                        style="@style/text_wrap_layout"
                        android:layout_marginLeft="43dp"
                        android:layout_marginTop="52dp"
                        android:textColor="@color/app_orange"
                        android:textSize="14sp"
                        android:text="@string/number" />
                    <!--number-->
                    <TextView
                        android:id="@+id/number"
                        style="@style/text_wrap_layout"
                        android:layout_marginRight="43dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="52dp"
                        android:textColor="@color/app_blue"
                        android:textSize="14sp"
                        android:text="Rp --" />
                    <TextView
                        style="@style/text_wrap_layout"
                        android:layout_marginLeft="43dp"
                        android:layout_marginTop="81dp"
                        android:textColor="@color/app_orange"
                        android:textSize="14sp"
                        android:text="@string/tenor" />
                    <!--tenor-->
                    <TextView
                        android:id="@+id/tenor"
                        style="@style/text_wrap_layout"
                        android:layout_marginRight="43dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="81dp"
                        android:textColor="@color/app_blue"
                        android:textSize="14sp"
                        android:text="" />
                </RelativeLayout>
                <!--btnPay-->
                <RelativeLayout
                    android:id="@+id/btnPay"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="148dp"
                    android:layout_marginLeft="43dp"
                    android:layout_marginRight="43dp"
                    android:background="@drawable/bg_btn_blue">
                    <TextView
                        style="@style/text_wrap_layout"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/pay" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <TextView
                    style="@style/text_wrap_layout"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="25dp"
                    android:textColor="#9f9f9f"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/details"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    >
                    <TextView
                        style="@style/text_wrap_layout"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="25dp"
                        android:textColor="#9f9f9f"
                        android:textSize="12sp"
                        android:text="@string/time_period2"
                        />
                    <TextView
                        style="@style/text_wrap_layout"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="168dp"
                        android:textColor="#9f9f9f"
                        android:textSize="12sp"
                        android:text="@string/number"
                        />
                    <TextView
                        style="@style/text_wrap_layout"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="25dp"
                        android:layout_alignParentRight="true"
                        android:textColor="#9f9f9f"
                        android:textSize="12sp"
                        android:text="@string/status"
                        />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="#d6d6d6"/>
                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:scrollbars="none"
                    android:listSelector="#ffffff"
                    android:divider="@null">
                </ListView>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>